tests/files/flow_controller_tests/should_fail/091.cmdr
x = true;
print arcsec(x);